# CortexOS_NLP

./: .gitignore  COMPLETION_REPORT.md  IMPLEMENTATION_GUIDE.md  ISSUES_SUMMARY.md  README.md  create_issues.sh  create_issues_api.py  issues_to_create.json
cortexos_nlp_complete_package/: State Of Repository-1.md
cortexos_nlp_complete_package/cortexos_nlp/: LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
cortexos_nlp_complete_package/cortexos_nlp/api/: __init__.py  cortex_doc.py  cortex_nlp.py  cortex_span.py  cortex_token.py  spacy_compatibility.py  test_cortex_nlp_simple.py  test_spacy_compatibility.py
cortexos_nlp_complete_package/cortexos_nlp/core/: __init__.py  binary_cell_memory.py  harmonic_resonance.py  spatial_anchor.py
cortexos_nlp_complete_package/cortexos_nlp/docs/: DETERMINISTIC_VS_PROBABILISTIC_TRADEOFFS.md  DEVELOPER_DOCUMENTATION.md  PACKAGE_SUMMARY.md  PARSER_IMPLEMENTATION_SPEC.md  PHASE2_5_VOICE_COGNITIVE_ARCHITECTURE.md  PHASE2_5_VOICE_COGNITIVE_REQUIREMENTS.md  PHASE2_DETAILED_ARCHITECTURE.md  PHASE2_INTEGRATION_SPECIFICATIONS.md  ROADMAP.md  TAGGER_IMPLEMENTATION_SPEC.md
cortexos_nlp_complete_package/cortexos_nlp/linguistic/: __init__.py  integrated_processor.py  parser.py  tagger.py  tokenizer.py
cortexos_nlp_complete_package/cortexos_nlp/performance/: optimization_analysis.py  performance_report.txt
cortexos_nlp_complete_package/cortexos_nlp/tests/: phase2_final_validation.py  test_api_layer_direct.py  test_comprehensive_api.py  test_phase1_integration.py  test_phase2_comprehensive.py  test_phase2_simple.py
